--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
       <header class="site-navbar site-navbar-target" role="banner">
 
-        <div class="container">
+        <div class="container"> 
+          <!-- hello this is a test -->
           <div class="row align-items-center position-relative">
 
             <div class="col-3">
@@ -80,9 +81,9 @@
       <div class="container">
         <div class="row align-items-center text-center justify-content-center">
           <div class="col-lg-10">
-            <h1 class="text-white mb-4">Creativity is a wild mind and a disciplined eye.</h1>
+            <h1 class="text-white mb-4">This is a test</h1>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit maxime nemo placeat dolor est.</p>
-            <p><a href="https://vimeo.com/191947042" data-fancybox class="btn-video_38929"><span class="icon-play"></span></a></p>
+            <p><a href="https://www.youtube.com/watch?v=K18SBewmAFw&t=214s" data-fancybox class="btn-video_38929"><span class="icon-play"></span></a></p>
           </div>
         </div>
       </div>
