--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <div class="col-3">
               <div class="site-logo">
-                <a href="index.html" class="font-weight-bold">Approach</a>
+                <a href="index.html" class="font-weight-bold">The Ark Projects.</a>
               </div>
             </div>
 
@@ -81,8 +81,8 @@
       <div class="container">
         <div class="row align-items-center text-center justify-content-center">
           <div class="col-lg-10">
-            <h1 class="text-white mb-4">This is a test33</h1>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit maxime nemo placeat dolor est.</p>
+            <h1 class="text-white mb-4">Welcome to my website!</h1>
+            <p class="lead">Where dreams dont come true, thank you.</p>
             <p><a href="https://www.youtube.com/watch?v=K18SBewmAFw&t=214s" data-fancybox class="btn-video_38929"><span class="icon-play"></span></a></p>
           </div>
         </div>
@@ -92,7 +92,7 @@
     <div class="container-fluid portfolio-wrap bg-light pt-0 site-section">
       <div class="row align-items-end mb-4">
         <div class="col-md-3">
-          <a href="portfolio-single.html" class="portfolio-item"><img src="images/img_1.jpg" alt="Image" class="img-fluid"></a>
+            <div style="width:100%;height:0;padding-bottom:53%;position:relative;"><iframe src="https://giphy.com/embed/fsoCk5kgOcYMM" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/ghost-shell-outghost-fsoCk5kgOcYMM"></a></p>
         </div>
         <div class="col-md-6">
           <a href="portfolio-single.html" class="portfolio-item"><img src="images/img_2.jpg" alt="Image" class="img-fluid"></a>
@@ -273,7 +273,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="site-logo-footer">
-              <a href="index.html">Approach</a>
+              <a href="index.html">The Ark Projects.</a>
             </div> 
           </div>
           <div class="col-md-8 ml-auto">
