--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="container">
         <div class="row align-items-center text-center justify-content-center">
           <div class="col-lg-10">
-            <h1 class="text-white mb-4">Welcome to my website!</h1>
+            <h1 class="text-white mb-4">Welcome!</h1>
             <p class="lead">Where dreams dont come true, thank you.</p>
             <p><a href="https://www.youtube.com/watch?v=K18SBewmAFw&t=214s" data-fancybox class="btn-video_38929"><span class="icon-play"></span></a></p>
           </div>
@@ -152,8 +152,8 @@
       <div class="container mb-5">
         <div class="row">
           <div class="col-md-7">
-            <h2 class="text-white font-weight-bold">Blog Updates</h2>
-            <p class="text-white lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt ducimus facere quam eos tempore beatae non eius, provident.</p>
+            <h2 class="text-white font-weight-bold">Why is this a website?</h2>
+            <p class="text-white lead">Frankly I have no life therefore I would like to make a cringy website and mess around with it.</p>
           </div>
         </div>
       </div>
