testing the <p> element.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1> The Ark Projects </h1>
+<!DOCTYPE html>
+<html>
+    <body>
+        <h1> The Ark Projects. </h1>
+        <p> Hello World this is a website where I will be learning to code html not only that but to learn more about web developing. 
+            I want to start this website from scratch and make it something amazing. Something I created by my self with no templates no anything. 
+            I know i misspell a lot of words but this is not a blog this is some where where I will come and make mistakes to learn. </p>
+    </body>
+</html>>
