--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
         <p> Hello World this is a website where I will be learning to code html not only that but to learn more about web developing. <br>
             I want to start this website from scratch and make it something amazing. Something I created by my self with no templates no anything. <br>
             I know i misspell a lot of words but this is not a blog this is some where where I will come and make mistakes to learn. <br> </p>
+            <button> RED BUTTON </button>
     </body>
-</html>>
+</html>
