--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <Style>body{background-color: hsla(202, 82%, 78%, 0.644);}</Style>
         <h1> The Ark Projects. </h1>
     </head>
     <body> 
         <p> Hello World this is a website where I will be learning to code html not only that but to learn more about web developing. <br>
             I want to start this website from scratch and make it something amazing. Something I created by my self with no templates no anything. <br>
-            I know i misspell a lot of words but this is not a blog this is some where where I will come and make mistakes to learn. <br> </p>
-            <button> 
-                Duck .. Duck .. Go!!
-                <a href="https://www.duckduckgo.com"!> </a>
-            </button>
+            I know i misspell a lot of words but this is not a blog this is some where where I will come and make mistakes to learn. <br> 
+        </p>
+        <button onclick="window.location.href = 'https://www.duckduckgo.com';"> Duck .. Duck .. Go!! </button>
+
+        <p> This is just a line of text that will seperate my test from the rest. </p>
+        <button onclick="window.location.href = JavaSript/test.js"> Activate me! </button>
     </body>
+    <!--<script> src="JavaScript/test.js"</script> -->
 </html>
