--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!--Stuff for chat box-->
-        <title>Chat - Customer Module</title>
+        <title>The Ark Projects</title>
         <link type="text/css" rel="stylesheet" href="style.css" />
 
         <!--Stuff I fogot what it was for-->
